# manga-notif-bot

./: .gitignore  README.md  consts.py  enums.py  main.py  pyproject.toml
core/: client.py
database/: models.py
handlers/: base.py  conversation.py  decorators.py  handlers.py
manga/: base.py  mangalib.py  models.py  readmanga.py
ptb/: __init__.py  decorators.py  inner_types.py
ptb/client/: client.py
ptb/internal/: base.py  conversation.py  handlers.py
